package com.zaozhuang.newborn.view;

import android.content.Context;
import android.util.AttributeSet;
import android.widget.LinearLayout;

import androidx.annotation.Nullable;

public class MyLayout extends LinearLayout {


    public MyLayout(Context context, @Nullable AttributeSet attrs) {
        super(context, attrs);
    }
}
